core: compute the vector width lazily, so -Djinfer.VectorBitSize=0 can mean it
    static final int VECTOR_BIT_SIZE =
            Integer.getInteger("jinfer.VectorBitSize", VectorShape.preferredShape().vectorBitSize());

Java evaluates that default argument EAGERLY, so VectorShape.preferredShape()
ran whatever the property said. On a JVM without --add-modules
jdk.incubator.vector that is a ClassNotFoundException in FloatTensor's static
initializer, before any of the scalar fallbacks can be reached - the knob whose
entire purpose is "do not use the Vector API" could not be used on the one JVM
that needs it.

Computed in a method now, with the probe in a try so an absent module answers 0
instead of throwing.

This does NOT yet make jinfer run without the module - FloatTensor loads, then
F32FloatTensor's linking hits jdk/incubator/vector/Vector next. The remaining
work is isolating vector-TYPED code in jinfer-core and jinfer-kernels so the
scalar path never links it; no port needs changing, since not one of them
references a vector type directly.

Measured, LFM2.5-350M-Q8_0 pp512 with the native gemm active in both:
Java vector paths on 4621 t/s, off 2182 t/s - so Java's SIMD is worth 2.1x on
top of jam.